Added CTA/CVP/DHPR/MDALL/MDEL CSV downloads EN/FR

--- a/APIDocumentation/cta-dataset-fr.html
+++ b/APIDocumentation/cta-dataset-fr.html
@@ -339,27 +339,13 @@
                                         <!-- Snippet package/snippets/resource_item.html start -->
                                         <!--Manufacturer Begins-->
                                         <tr>
-
-                                            <td>Manufacturer</td>
-                                            <td>Dataset</td>
-                                            <td>JSON</td>
-                                            <td>English</td>
-                                            <td><a href="https://api.hres.ca/cta/api/manufacturer/?lang=en&type=json" title="Resource 1" class="resource-url-analytics btn btn-primary" target="_blank">Accès</a></td>
-                                        </tr>
-                                        <tr>
                                             <td>Manufacturer</td>
                                             <td>Dataset</td>
                                             <td>JSON</td>
                                             <td>French</td>
                                             <td><a href="https://api.hres.ca/cta/api/manufacturer/?lang=fr&type=json" title="Resource 2" class="resource-url-analytics btn btn-primary" target="_blank">Accès</a></td>
                                         </tr>
-                                        <tr>
-                                            <td>Manufacturer</td>
-                                            <td>Dataset</td>
-                                            <td>XML</td>
-                                            <td>English</td>
-                                            <td><a id="manufacturerEN" href="#" title="Resource 1" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/cta/api/manufacturer/?lang=en&type=xml', 'manufacturerEN')">Accès</a></td>
-                                        </tr>
+
                                         <tr>
                                             <td>Manufacturer</td>
                                             <td>Dataset</td>
@@ -371,27 +357,15 @@
                                             <td>Manufacturer</td>
                                             <td>Dataset</td>
                                             <td>CSV</td>
-                                            <td>English</td>
-                                            <td><input type="button" id="manufacturerEn" class="btn btn-default" value="CSV (Download)" onclick="JSONtoCSV('Manufacturer Data', 'https://api.hres.ca/cta/api/manufacturer/?lang=en&type=json');" /></td>
-                                        </tr>
-                                        <tr>
-                                            <td>Manufacturer</td>
-                                            <td>Dataset</td>
-                                            <td>CSV</td>
                                             <td>French</td>
-                                            <td><input type="button" id="manufacturerFr" class="btn btn-default" value="CSV (Download)" onclick="JSONtoCSV('Manufacturer Data', 'https://api.hres.ca/cta/api/manufacturer/?lang=fr&type=json');" /></td>
+                                            <td><a class="resource-url-analytics btn btn-primary" href="./api/CSV/DownloadCSV?dataType=manufacturer&lang=fr">Accès</a></td>
                                         </tr>
+
                                         <!--Manufacturer Ends-->
                                         <!-- Snippet package/snippets/resource_item.html end -->
                                         <!-- Snippet package/snippets/resource_item.html start -->
                                         <!--Medical Condition Begins-->
-                                        <tr>
-                                            <td>Medical Condition</td>
-                                            <td>Dataset</td>
-                                            <td>JSON</td>
-                                            <td>English</td>
-                                            <td><a href="https://api.hres.ca/cta/api/medicalcondition/?lang=en&type=json" title="Resource 1" class="resource-url-analytics btn btn-primary" target="_blank">Accès</a></td>
-                                        </tr>
+
                                         <tr>
                                             <td>Medical Condition</td>
                                             <td>Dataset</td>
@@ -399,13 +373,7 @@
                                             <td>French</td>
                                             <td><a href="https://api.hres.ca/cta/api/medicalcondition/?lang=fr&type=json" title="Resource 2" class="resource-url-analytics btn btn-primary" target="_blank">Accès</a></td>
                                         </tr>
-                                        <tr>
-                                            <td>Medical Condition</td>
-                                            <td>Dataset</td>
-                                            <td>XML</td>
-                                            <td>English</td>
-                                            <td><a id="medicalconditionEN" href="#" title="Resource 1" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/cta/api/medicalcondition/?lang=en&type=xml', 'medicalconditionEN')">Accès</a></td>
-                                        </tr>
+
                                         <tr>
                                             <td>Medical Condition</td>
                                             <td>Dataset</td>
@@ -413,17 +381,20 @@
                                             <td>French</td>
                                             <td><a id="medicalconditionFR" href="#" title="Resource 2" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/cta/api/medicalcondition/?lang=fr&type=xml', 'medicalconditionFR')">Accès</a></td>
                                         </tr>
+
+                                        <tr>
+                                            <td>Medical Condition</td>
+                                            <td>Dataset</td>
+                                            <td>CSV</td>
+                                            <td>French</td>
+                                            <td><a class="resource-url-analytics btn btn-primary" href="./api/CSV/DownloadCSV?dataType=condition&lang=fr">Accès</a></td>
+                                        </tr>
+
                                         <!--Medical Condition Ends-->
                                         <!-- Snippet package/snippets/resource_item.html end -->
                                         <!-- Snippet package/snippets/resource_item.html start -->
                                         <!--Product Begins-->
-                                        <tr>
-                                            <td>Product Marque</td>
-                                            <td>Dataset</td>
-                                            <td>JSON</td>
-                                            <td>English</td>
-                                            <td><a href="https://api.hres.ca/cta/api/productbrand/?lang=en&type=json" title="Resource 1" class="resource-url-analytics btn btn-primary" target="_blank">Accès</a></td>
-                                        </tr>
+
                                         <tr>
                                             <td>Product Marque</td>
                                             <td>Dataset</td>
@@ -431,13 +402,7 @@
                                             <td>French</td>
                                             <td><a href="https://api.hres.ca/cta/api/productbrand/?lang=fr&type=json" title="Resource 2" class="resource-url-analytics btn btn-primary" target="_blank">Accès</a></td>
                                         </tr>
-                                        <tr>
-                                            <td>Product Marque</td>
-                                            <td>Dataset</td>
-                                            <td>XML</td>
-                                            <td>English</td>
-                                            <td><a id="productbrandEN" href="#" title="Resource 1" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/cta/api/productbrand/?lang=en&type=xml', 'productbrandEN')">Accès</a></td>
-                                        </tr>
+
                                         <tr>
                                             <td>Product Marque</td>
                                             <td>Dataset</td>
@@ -445,17 +410,20 @@
                                             <td>French</td>
                                             <td><a id="productbrandFR" href="#" title="Resource 2" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/cta/api/productbrand/?lang=fr&type=xml', 'productbrandFR')">Accès</a></td>
                                         </tr>
+
+                                        <tr>
+                                            <td>Product Marque</td>
+                                            <td>Dataset</td>
+                                            <td>CSV</td>
+                                            <td>French</td>
+                                            <td><a class="resource-url-analytics btn btn-primary" href="./api/CSV/DownloadCSV?dataType=brand&lang=fr">Accès</a></td>
+                                        </tr>
+
                                         <!--Product Brand Ends-->
                                         <!-- Snippet package/snippets/resource_item.html end -->
                                         <!-- Snippet package/snippets/resource_item.html start -->
                                         <!--Protocol Form Begins-->
-                                        <tr>
-                                            <td>Protocol</td>
-                                            <td>Dataset</td>
-                                            <td>JSON</td>
-                                            <td>English</td>
-                                            <td><a href="https://api.hres.ca/cta/api/protocol/?lang=en&type=json" title="Resource 1" class="resource-url-analytics btn btn-primary" target="_blank">Accès</a></td>
-                                        </tr>
+
                                         <tr>
                                             <td>Protocol</td>
                                             <td>Dataset</td>
@@ -463,13 +431,7 @@
                                             <td>French</td>
                                             <td><a href="https://api.hres.ca/cta/api/protocol/?lang=fr&type=json" title="Resource 2" class="resource-url-analytics btn btn-primary" target="_blank">Accès</a></td>
                                         </tr>
-                                        <tr>
-                                            <td>Protocol</td>
-                                            <td>Dataset</td>
-                                            <td>XML</td>
-                                            <td>English</td>
-                                            <td><a id="protocolEN" href="#" title="Resource 1" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/cta/api/protocol/?lang=en&type=xml', 'protocolEN')">Accès</a></td>
-                                        </tr>
+
                                         <tr>
                                             <td>Protocol</td>
                                             <td>Dataset</td>
@@ -477,6 +439,15 @@
                                             <td>French</td>
                                             <td><a id="protocolFR" href="#" title="Resource 2" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/cta/api/protocol/?lang=fr&type=xml', 'protocolFR')">Accès</a></td>
                                         </tr>
+
+                                        <tr>
+                                            <td>Protocol</td>
+                                            <td>Dataset</td>
+                                            <td>CSV</td>
+                                            <td>French</td>
+                                            <td><a class="resource-url-analytics btn btn-primary" href="./api/CSV/DownloadCSV?dataType=protocol&lang=fr">Accès</a></td>
+                                        </tr>
+
                                         <!--Protocol Form Ends-->
                                         <!-- Snippet package/snippets/resource_item.html end -->
                                         <!-- Snippet package/snippets/resource_item.html start -->
@@ -485,23 +456,10 @@
                                             <td>Status</td>
                                             <td>Dataset</td>
                                             <td>JSON</td>
-                                            <td>English</td>
-                                            <td><a href="https://api.hres.ca/cta/api/status/?lang=en&type=json" title="Resource 1" class="resource-url-analytics btn btn-primary" target="_blank">Accès</a></td>
-                                        </tr>
-                                        <tr>
-                                            <td>Status</td>
-                                            <td>Dataset</td>
-                                            <td>JSON</td>
                                             <td>French</td>
                                             <td><a href="https://api.hres.ca/cta/api/status/?lang=fr&type=json" title="Resource 2" class="resource-url-analytics btn btn-primary" target="_blank">Accès</a></td>
                                         </tr>
-                                        <tr>
-                                            <td>Status</td>
-                                            <td>Dataset</td>
-                                            <td>XML</td>
-                                            <td>English</td>
-                                            <td><a id="statusEN" href="#" title="Resource 1" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/cta/api/status/?lang=en&type=xml', 'statusEN')">Accès</a></td>
-                                        </tr>
+
                                         <tr>
                                             <td>Status</td>
                                             <td>Dataset</td>
@@ -509,17 +467,19 @@
                                             <td>French</td>
                                             <td><a id="statusFR" href="#" title="Resource 2" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/cta/api/status/?lang=fr&type=xml', 'statusFR')">Accès</a></td>
                                         </tr>
+                                        <tr>
+                                            <td>Status</td>
+                                            <td>Dataset</td>
+                                            <td>CSV</td>
+                                            <td>French</td>
+                                            <td><a class="resource-url-analytics btn btn-primary" href="./api/CSV/DownloadCSV?dataType=statuss&lang=fr">Accès</a></td>
+                                        </tr>
+
                                         <!--Status Ends-->
                                         <!-- Snippet package/snippets/resource_item.html end -->
                                         <!-- Snippet package/snippets/resource_item.html start -->
                                         <!--Study Population Begins-->
-                                        <tr>
-                                            <td>Study Population</td>
-                                            <td>Dataset</td>
-                                            <td>JSON</td>
-                                            <td>English</td>
-                                            <td><a href="https://api.hres.ca/cta/api/studypopulation/?lang=en&type=json" title="Resource 1" class="resource-url-analytics btn btn-primary" target="_blank">Accès</a></td>
-                                        </tr>
+
                                         <tr>
                                             <td>Study Population</td>
                                             <td>Dataset</td>
@@ -527,13 +487,7 @@
                                             <td>French</td>
                                             <td><a href="https://api.hres.ca/cta/api/studypopulation/?lang=fr&type=json" title="Resource 2" class="resource-url-analytics btn btn-primary" target="_blank">Accès</a></td>
                                         </tr>
-                                        <tr>
-                                            <td>Study Population</td>
-                                            <td>Dataset</td>
-                                            <td>XML</td>
-                                            <td>English</td>
-                                            <td><a id="studypopulationEN" href="#" title="Resource 1" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/cta/api/studypopulation/?lang=en&type=xml', 'studypopulationEN')">Accès</a></td>
-                                        </tr>
+
                                         <tr>
                                             <td>Study Population</td>
                                             <td>Dataset</td>
@@ -541,17 +495,20 @@
                                             <td>French</td>
                                             <td><a id="studypopulationFR" href="#" title="Resource 2" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/cta/api/studypopulation/?lang=fr&type=xml', 'studypopulationFR')">Accès</a></td>
                                         </tr>
+
+                                        <tr>
+                                            <td>Study Population</td>
+                                            <td>Dataset</td>
+                                            <td>CSV</td>
+                                            <td>French</td>
+                                            <td><a class="resource-url-analytics btn btn-primary" href="./api/CSV/DownloadCSV?dataType=population&lang=fr">Accès</a></td>
+                                        </tr>
+
                                         <!--Study Population Ends-->
                                         <!-- Snippet package/snippets/resource_item.html end -->
                                         <!-- Snippet package/snippets/resource_item.html start -->
                                         <!--Link to Documentation Begins-->
-                                        <tr>
-                                            <td>Clinical Trials Database API Documentation</td>
-                                            <td>Guide</td>
-                                            <td>HTML</td>
-                                            <td>English</td>
-                                            <td><a href="http://api.hres.ca/documentation/cta-documentation-en.html" title="Resource 3" class="resource-url-analytics btn btn-primary" target="_blank">Accès</a></td>
-                                        </tr>
+    
                                         <tr>
                                             <td>Clinical Trials API Documentation</td>
                                             <td>Guide</td>
