--- a/APIDocumentation/mdel-dataset-fr.html
+++ b/APIDocumentation/mdel-dataset-fr.html
@@ -291,7 +291,7 @@
                                         <td>Company</td>
                                         <td>Dataset</td>
                                         <td>CSV</td>
-                                        <td><input type="button" id="dlCompany" class="resource-url-analytics btn btn-primary" value="CSV" onclick="JSONtoCSV('Company Data', 'https://api.hres.ca/mdel/api-v1/company/type=json');" /></td>
+                                        <td><a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/mdels/api-v1/CSV/DownloadCSV/?dataType=company">Access</a></td>
                                     </tr>
 
                                     <tr>
@@ -312,7 +312,7 @@
                                         <td>Country</td>
                                         <td>Dataset</td>
                                         <td>CSV</td>
-                                        <td><input type="button" id="dlCountry" class="resource-url-analytics btn btn-primary" value="CSV" onclick="JSONtoCSV('Country Data', 'https://api.hres.ca/mdel/api-v1/country/type=json');" /></td>
+                                        <td><a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/mdels/api-v1/CSV/DownloadCSV/?dataType=country">Access</a></td>
                                     </tr>
 
                                     <tr>
@@ -333,7 +333,7 @@
                                         <td>Establishment</td>
                                         <td>Dataset</td>
                                         <td>CSV</td>
-                                        <td><input type="button" id="dlEst" class="resource-url-analytics btn btn-primary" value="CSV" onclick="JSONtoCSV('Establishment Data', 'https://api.hres.ca/mdel/api-v1/establishment/type=json');" /></td>
+                                        <td><a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/mdels/api-v1/CSV/DownloadCSV/?dataType=establishment">Access</a></td>
                                     </tr>
 
                                     <tr>
@@ -354,7 +354,7 @@
                                         <td>Province</td>
                                         <td>Dataset</td>
                                         <td>CSV</td>
-                                        <td><input type="button" id="dlEst" class="resource-url-analytics btn btn-primary" value="CSV" onclick="JSONtoCSV('Province Data', 'https://api.hres.ca/mdel/api-v1/province/type=json');" /></td>
+                                        <td><a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/mdels/api-v1/CSV/DownloadCSV/?dataType=province">Access</a></td>
                                     </tr>
 
                                 </table>
