--- a/APIDocumentation/mdel-dataset-en.html
+++ b/APIDocumentation/mdel-dataset-en.html
@@ -292,7 +292,7 @@
                                         <td>Company</td>
                                         <td>Dataset</td>
                                         <td>CSV</td>
-                                        <td><input type="button" id="dlCompany" class="resource-url-analytics btn btn-primary" value="CSV" onclick="JSONtoCSV('Company Data', 'https://api.hres.ca/mdels/api-v1/company/?company_name=&type=json');" /></td>
+                                        <td><a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/mdels/api-v1/CSV/DownloadCSV/?dataType=company">Access</a></td>
                                     </tr>
 
                                     <tr>
@@ -313,7 +313,7 @@
                                         <td>Country</td>
                                         <td>Dataset</td>
                                         <td>CSV</td>
-                                        <td><input type="button" id="dlCountry" class="resource-url-analytics btn btn-primary" value="CSV" onclick="JSONtoCSV('Country Data', 'https://api.hres.ca/mdels/api-v1/country/?lang=en&country=&type=json');" /></td>
+                                        <td><a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/mdels/api-v1/CSV/DownloadCSV/?dataType=country">Access</a></td>
                                     </tr>
 
                                     <tr>
@@ -334,7 +334,7 @@
                                         <td>Establishment</td>
                                         <td>Dataset</td>
                                         <td>CSV</td>
-                                        <td><input type="button" id="dlEst" class="resource-url-analytics btn btn-primary" value="CSV" onclick="JSONtoCSV('Establishment Data', 'https://api.hres.ca/mdels/api-v1/establishment/?establishment_id=&type=json');" /></td>
+                                        <td><a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/mdels/api-v1/CSV/DownloadCSV/?dataType=establishment">Access</a></td>
                                     </tr>
 
                                     <tr>
@@ -355,7 +355,7 @@
                                         <td>Province</td>
                                         <td>Dataset</td>
                                         <td>CSV</td>
-                                        <td><input type="button" id="dlEst" class="resource-url-analytics btn btn-primary" value="CSV" onclick="JSONtoCSV('Province Data', 'https://api.hres.ca/mdels/api-v1/province/?province=&lang=en&type=json');" /></td>
+                                        <td><a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/mdels/api-v1/CSV/DownloadCSV/?dataType=province">Access</a></td>
                                     </tr>
 
                                 </table>
